Main image and font changes

--- a/home/index.html
+++ b/home/index.html
@@ -68,13 +68,10 @@
 
 						<h1 id="main-title"><strong>Gelmu's Cleaning</strong></h1>
 						<div id="main-banner-text">
-							<p>With <strong>decades of experience,</strong>
+							<p><strong>Decades of experience making</strong>
 								<br />
-								and <strong>love</strong> for <strong>New York city,</strong>
-								<br />
-								we are <strong>proud</strong> to be a part
-								<br />
-								of what makes it <strong>shine!</strong></p>
+								<strong>New York city shine!</strong>
+								</p>
 								<footer>
 									<ul class="buttons stacked">
 										<li><a href="#main" class="scrolly" id="main-banner-button">Our Promise to You</a></li>
@@ -202,7 +199,7 @@
 					<footer>
 						<ul class="buttons">
 							<li><a href="../reviews" class="button primary">Recent Reviews</a></li>
-							<li><a href="https://www.yelp.com/biz/gelmus-cleaning-new-york-2?override_cta=Get+pricing+%26+availability" class="button">Yelp Listing</a></li>
+							<li><a  id="yelp-listing-button" href="https://www.yelp.com/biz/gelmus-cleaning-new-york-2?override_cta=Get+pricing+%26+availability" class="button">Yelp Listing</a></li>
 						</ul>
 					</footer>
 
