Image and font fixes

--- a/home/index.html
+++ b/home/index.html
@@ -68,10 +68,13 @@
 
 						<h1 id="main-title"><strong>Gelmu's Cleaning</strong></h1>
 						<div id="main-banner-text">
-							<p><strong>Decades of experience making</strong>
+							<p>With <strong>decades of experience,</strong>
 								<br />
-								<strong>New York city shine!</strong>
-								</p>
+								and <strong>love</strong> for <strong>New York city,</strong>
+								<br />
+								we are <strong>proud</strong> to be a part
+								<br />
+								of what makes it <strong>shine!</strong></p>
 								<footer>
 									<ul class="buttons stacked">
 										<li><a href="#main" class="scrolly" id="main-banner-button">Our Promise to You</a></li>
