--- a/home/index.html
+++ b/home/index.html
@@ -194,8 +194,9 @@
 				<section id="cta">
 
 					<header>
-						<h2><strong>Gelmu's</strong> Reviews</h2>
-						<p>Customers <strong>love</strong> us on Yelp! Check out our listing and reviews.</p>
+						<h2 id="review-title"><strong>Gelmu's</strong> Reviews</h2>
+						<p id="review-paragraph">Customers <strong>love</strong> us on Yelp!
+						</br> Check out our listing and reviews.</p>
 					</header>
 					<!-- Yelp embedded -->
 					<span class="yelp-review" data-review-id="lqf-vZEJ28MZU4mQTHRunA" data-hostname="www.yelp.com">Read <a href="https://www.yelp.com/user_details?userid=P2zvwiexkB3p0Y3y9q2LUA" rel="nofollow noopener">Lina B.</a>'s <a href="https://www.yelp.com/biz/gelmus-cleaning-new-york-2?hrid=lqf-vZEJ28MZU4mQTHRunA" rel="nofollow noopener">review</a> of <a href="https://www.yelp.com/biz/qiMZbeS05cZ3L92Y_mYEdQ" rel="nofollow noopener">Gelmu's Cleaning</a> on <a href="https://www.yelp.com" rel="nofollow noopener">Yelp</a></span>
