Policy and specials update

--- a/special/index.html
+++ b/special/index.html
@@ -65,7 +65,7 @@
 							</br>on Any Service</h2>
 						</header>
 						<header>
-							<h3>East Village & West Village
+							<h3>East Village & West Village, Manhattan
 							</br>service areas only</h3>
 						</header>
 						<p id="overide-center">Mention offer to redeem.</p>
