--- a/policies/index.html
+++ b/policies/index.html
@@ -67,14 +67,13 @@
 					<!-- One -->
 					<section class="wrapper style4 container special">
 						<ol id="overide-left-align" class="prominent-policies">
-							<li>We will re-clean your home free of charge if you notify us within 24 hours that our work was unsatisfactory. Claims made later than 24 hours are subject to approval.</li>
-							<li>Whenever possible, we strive to send two or more cleaners to ensure safety, optimal quality, and faster service. Especially for first-time cleanings.</li>
-							<li>We recommend certain cleaning products, but will work with your product preferences. It is up to you to determine and provide the products that we use. If not, we will buy what we consider the appropriate products for your cleaning needs. We generally charge for these supplies at cost, but please keep in mind that we are not a shopping service. If necessary, in our discretion, the amount we charge may include a factor for our time. If you see this as an issue, let’s discuss up front so we can reach an amicable understanding.</li>
-							<li>Initially, if you do not have a vacuum cleaner, we will bring one, but we request that you make your own available for subsequent cleanings.</li>
-							<li>Recurring cleanings, we will try to provide the same cleaner upon request but cannot guarantee it. Rest assured, all our cleaners are expertly trained to Gelmu’s standards and will always have prior experience working in your home.</li>
 							<li>For privacy protection, customers and cleaners must communicate solely through official Gelmu's Cleaning contact channels.</li>
-									<a class="no-border" href="tel:+19176931708">(917) 693-1708</a>
-									<a  class="no-border" href="mailto:gelmuscleaning@gmail.com">gelmuscleaning@gmail.com</a>
+							<li>Once a job is confirmed for the following day, it may be canceled without penalty until 8:00 p.m. on the preceding day. Cancellations made after 8:00 p.m. will incur a $50 fee, which will be paid directly to the cleaner. If the job involves two cleaners, the customer will be responsible for one $50 fee, while the company will cover the additional $50 fee for the second cleaner.</li>
+							<li>Whenever possible, we strive to send two or more cleaners to ensure safety, optimal quality, and faster service. Especially for first-time cleanings.</li>
+							<li>We recommend specific cleaning products but are happy to accommodate your preferences. You are responsible for providing the necessary supplies; if not, we will purchase suitable products on your behalf and charge you the cost, which may include a time fee. Please let us know in advance if this is a concern so we can discuss and find a suitable solution.</li>
+							<li>If you do not have a vacuum cleaner, we will bring one, but we request that you make your own available for subsequent cleanings.</li>
+							<li>We will re-clean your home free of charge if you notify us within 24 hours that our work was unsatisfactory. Claims made later than 24 hours are subject to approval.</li>
+							<li>Recurring cleanings, we will try to provide the same cleaner upon request but cannot guarantee it. Rest assured, all our cleaners are expertly trained to Gelmu’s standards and will always have prior experience working in your home.</li>
 							</ul>
 						</ol>
 						<footer>
