--- a/policies/index.html
+++ b/policies/index.html
@@ -68,7 +68,7 @@
 					<section class="wrapper style4 container special">
 						<ol id="overide-left-align" class="prominent-policies">
 							<li>For privacy protection, customers and cleaners must communicate solely through official Gelmu's Cleaning contact channels.</li>
-							<li>Once a job is confirmed for the following day, it may be canceled without penalty until 8:00 p.m. on the preceding day. Cancellations made after 8:00 p.m. will incur a $50 fee, which will be paid directly to the cleaner. If the job involves two cleaners, the customer will be responsible for one $50 fee, while the company will cover the additional $50 fee for the second cleaner.</li>
+							<li>A confirmed job for the next day can be canceled without penalty if done before 8:00 p.m. the day before. Cancellations made after 8:00 p.m. will incur a $50 fee, which will be paid directly to the cleaner. If the job involves two cleaners, the customer will be responsible for one $50 fee, while the company will cover the additional $50 fee for the second cleaner.</li>
 							<li>Whenever possible, we strive to send two or more cleaners to ensure safety, optimal quality, and faster service. Especially for first-time cleanings.</li>
 							<li>We recommend specific cleaning products but are happy to accommodate your preferences. You are responsible for providing the necessary supplies; if not, we will purchase suitable products on your behalf and charge you the cost, which may include a time fee. Please let us know in advance if this is a concern so we can discuss and find a suitable solution.</li>
 							<li>If you do not have a vacuum cleaner, we will bring one, but we request that you make your own available for subsequent cleanings.</li>
