--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-		<title>Gelmu's Cleaning</title>
+		<title>Gelmu's Cleaning | Best NYC Cleaning Service</title>
         <script>
             // Redirect to Home after 2 seconds
             setTimeout(function () {
@@ -10,7 +10,8 @@
         </script>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="icon" type="image/png" href="images/favicon.png">
+		<meta name="description" content="Gelmu's Cleaning offers professional home cleaning services in NYC. Trusted by generations for weekly, bi-weekly, and monthly cleaning needs. Request a quote today!">
+        <link rel="icon" type="image/png" href="images/favicon.png">
         <link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
