Request quote button fix

--- a/home/index.html
+++ b/home/index.html
@@ -40,7 +40,7 @@
 											<li>
 												<a  class="no-border" href="mailto:gelmuscleaning@gmail.com">&#x1F4E7; E-mail Us</a>
 											</li>
-											<li><a href="#">&#9993; Request Quote</a></li>
+											<li><a href="../quote">&#9993; Request Quote</a></li>
 										</ul>
 									</li>
 								</ul>
