Page formatting to fit google search result + new sitemap

--- a/about-gelmu/index.html
+++ b/about-gelmu/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Quote - Gelmu's Cleaning | Best NYC Cleaning Service</title>
+		<title>About - Gelmu's Cleaning | Best NYC Cleaning Service</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="Gelmu's Cleaning offers professional home cleaning services in NYC. Trusted by generations for weekly, bi-weekly, and monthly cleaning needs. Request a quote today!">
@@ -26,12 +26,12 @@
 						<li class="submenu">
 							<a href="#" class="black-color">Menu</a>
 							<ul>
-								<li><a href="../services">Services</a></li>
+								<li><a href="../our-cleaning-services">Services</a></li>
 								<li><a href="../coverage">Coverage Area</a></li>
 								<li><a href="../pricing">Pricing</a></li>
 								<li><a href="../reviews">Reviews</a></li>
 								<li><a href="../policies">Policies</a></li>
-								<li><a href="../about">About</a></li>
+								<li><a href="#">About</a></li>
 								<li class="submenu">
 										<a href="#">Contact</a>
 										<ul>
@@ -40,7 +40,7 @@
 											<li>
 												<a  class="no-border" href="mailto:gelmuscleaning@gmail.com">&#x1F4E7; E-mail Us</a>
 											</li>
-											<li><a href="#">&#9993; Request Quote</a></li>
+											<li><a href="../contact">&#9993; Request Quote</a></li>
 										</ul>
 									</li>
 							</ul>
@@ -51,7 +51,7 @@
 								<li><a href="../special">2024 Holiday Special</a></li>
 							</ul>
 						</li>
-						<li><a href="#" class="button primary">Request A Quote</a></li>
+						<li><a href="../contact" class="button primary">Request A Quote</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -60,23 +60,97 @@
 				<article id="main">
 
 					<header class="special container">
-						<span class="icon solid fa-paper-plane"></span>
-						<h2>Quote Request</h2>
-						<p>Please submit the form below for us to get in touch with you!</p>
+						<span class="icon solid fa-heart"></span>
+						<h2>About Us</h2>
+						<p>We love New York City and are proud to be part of what makes it shine! For decades, customers have praised and remained loyal to <strong>Gelmu’s Cleaning</strong> for their weekly, bi-weekly, and monthly needs.</p>
 					</header>
 
 					<!-- One -->
-						<section class="wrapper style4 special container medium">
-							<!-- Content -->
-							<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfgch82UOO7b3KaahCGcJwgw3ZpGS186QplWcKwGGwbZxUW_Q/viewform?embedded=true" width="100%" height="2240" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-							<header>
-								<h4 id="overide-left-align">Pricing Policy</h4>
-							</header>
-							<p id="overide-left-align"><strong>First Time Standard / First Time Deep:</strong> If needed, we'll add 30 minutes at no additional charge. Beyond that, we charge $10 for each extra 15 minutes.</p>
-							<p id="overide-left-align"><strong>Weekly / Bi-Weekly / Monthly:</strong> 15-minute grace period included. If there's consistent excess work, we can discuss adjusting the rate.</p>
-							<a href="../pricing" class="button primary">Pricing Details</a>
+					<section class="wrapper style3 container special">
 
-						</section>
+						<header class="major">
+							<h2>Experience the <strong>difference</strong></h2>
+						</header>
+
+						<div class="row">
+							<div class="col-6 col-12-narrower">
+
+								<section>
+									<p href="#" class="image featured"><img src="../images/gelmu5.jpg" alt="" /></p>
+									<header>
+										<h3>Customer <strong>Satisfaction</strong></h3>
+									</header>
+									<p>Our dedication to exceptional quality and customer satisfaction is so strong that some clients voluntarily pay more than our asking price. Their generosity allows us to maintain high standards while still offering competitive rates.</p>
+								</section>
+
+							</div>
+							<div class="col-6 col-12-narrower">
+
+								<section>
+									<p href="#" class="image featured"><img src="../images/gelmu1.jpg" alt="" /></p>
+									<header>
+										<h3><strong>Qualified</strong> Cleaners</h3>
+									</header>
+									<p>We never send an unqualified cleaner alone. If a cleaner doesn’t meet our standards, they assist a lead cleaner, regardless of their prior experience elsewhere.</p>
+								</section>
+
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-6 col-12-narrower">
+
+								<section>
+									<p href="#" class="image featured"><img src="../images/gelmu6.jpg" alt="" /></p>
+									<header>
+										<h3><strong>Quality</strong> Cleaning</h3>
+									</header>
+									<p>Gelmu's Cleaning is a family-owned housekeeping team that takes pride in providing excellent service in New York City. Our customers have trusted us as their weekly, bi-weekly, or monthly home/apartment cleaners for years.</p>
+								</section>
+
+							</div>
+							<div class="col-6 col-12-narrower">
+
+								<section>
+									<p href="#" class="image featured"><img src="../images/gelmu2.jpg" alt="" /></p>
+									<header>
+										<h3><strong>Reasonable</strong> Prices</h3>
+									</header>
+									<p>Our flat rates include the estimated cleaning time plus an additional 30 minutes as a contingency. Most clients don’t incur extra charges; only a few pay more for significant additional work.</p>
+								</section>
+
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-6 col-12-narrower">
+
+								<section>
+									<p href="#" class="image featured"><img src="../images/gelmu3.jpg" alt="" /></p>
+									<header>
+										<h3><strong>Realistic</strong> Cleaning Timelines</h3>
+									</header>
+									<p>Our estimated cleaning times are highly realistic. Thanks to thorough training and years of field experience, our cleaners consistently deliver top-notch quality within the allotted time.</p>
+								</section>
+
+							</div>
+							<div class="col-6 col-12-narrower">
+
+								<section>
+									<p href="#" class="image featured"><img src="../images/gelmu4.jpg" alt="" /></p>
+									<header>
+										<h3><strong>Trusted</strong> by Generations</h3>
+									</header>
+									<p>Families across New York City have trusted Gelmu’s Cleaning for decades. Our reputation is built on reliability, consistency, and a personal touch that makes every cleaning feel like a step towards a better home.</p>
+								</section>
+
+							</div>
+						</div>
+						<footer class="major">
+							<ul class="buttons">
+								<li><a href="../contact" class="button">Request A Quote</a></li>
+							</ul>
+						</footer>
+
+					</section>
 
 				</article>
 
