--- a/our-cleaning-services/index.html
+++ b/our-cleaning-services/index.html
@@ -31,7 +31,7 @@
 								<li><a href="../pricing">Pricing</a></li>
 								<li><a href="../reviews">Reviews</a></li>
 								<li><a href="../policies">Policies</a></li>
-								<li><a href="../about">About</a></li>
+								<li><a href="../about-gelmu">About</a></li>
 								<li class="submenu">
 										<a href="#">Contact</a>
 										<ul>
@@ -40,7 +40,7 @@
 											<li>
 												<a  class="no-border" href="mailto:gelmuscleaning@gmail.com">&#x1F4E7; E-mail Us</a>
 											</li>
-											<li><a href="../quote">&#9993; Request Quote</a></li>
+											<li><a href="../contact">&#9993; Request Quote</a></li>
 										</ul>
 									</li>
 							</ul>
@@ -51,7 +51,7 @@
 								<li><a href="../special">2024 Holiday Special</a></li>
 							</ul>
 						</li>
-						<li><a href="../quote" class="button primary">Request A Quote</a></li>
+						<li><a href="../contact" class="button primary">Request A Quote</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -236,7 +236,7 @@
 						</div>
 						<footer class="major">
 							<ul class="buttons">
-								<li><a href="../quote" class="button">Request A Quote</a></li>
+								<li><a href="../contact" class="button">Request A Quote</a></li>
 							</ul>
 						</footer>
 
