--- a/pricing/index.html
+++ b/pricing/index.html
@@ -26,12 +26,12 @@
 						<li class="submenu">
 							<a href="#" class="black-color">Menu</a>
 							<ul>
-								<li><a href="../services">Services</a></li>
+								<li><a href="../our-cleaning-services">Services</a></li>
 								<li><a href="../coverage">Coverage Area</a></li>
 								<li><a href="#">Pricing</a></li>
 								<li><a href="../reviews">Reviews</a></li>
 								<li><a href="../policies">Policies</a></li>
-								<li><a href="../about">About</a></li>
+								<li><a href="../about-gelmu">About</a></li>
 								<li class="submenu">
 										<a href="#">Contact</a>
 										<ul>
@@ -40,7 +40,7 @@
 											<li>
 												<a  class="no-border" href="mailto:gelmuscleaning@gmail.com">&#x1F4E7; E-mail Us</a>
 											</li>
-											<li><a href="../quote">&#9993; Request Quote</a></li>
+											<li><a href="../contact">&#9993; Request Quote</a></li>
 										</ul>
 									</li>
 							</ul>
@@ -51,7 +51,7 @@
 								<li><a href="../special">2024 Holiday Special</a></li>
 							</ul>
 						</li>
-						<li><a href="../quote" class="button primary">Request A Quote</a></li>
+						<li><a href="../contact" class="button primary">Request A Quote</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -977,7 +977,7 @@
 
 						<footer>
 							<ul class="buttons">
-								<li><a href="../quote" class="button small">Request a Quote</a></li>
+								<li><a href="../contact" class="button small">Request a Quote</a></li>
 							</ul>
 						</footer>
 					</section>
