--- a/404.html
+++ b/404.html
@@ -27,12 +27,12 @@
 						<li class="submenu">
 							<a href="#" class="black-color">Menu</a>
                             <ul>
-								<li><a href="../services">Services</a></li>
+								<li><a href="../our-cleaning-services">Services</a></li>
 								<li><a href="../coverage">Coverage Area</a></li>
 								<li><a href="../pricing">Pricing</a></li>
 								<li><a href="../reviews">Reviews</a></li>
 								<li><a href="../policies">Policies</a></li>
-								<li><a href="../about">About</a></li>
+								<li><a href="../about-gelmu">About</a></li>
 								<li class="submenu">
 										<a href="#">Contact</a>
 										<ul>
@@ -41,12 +41,12 @@
 											<li>
 												<a  class="no-border" href="mailto:gelmuscleaning@gmail.com">&#x1F4E7; E-mail Us</a>
 											</li>
-											<li><a href="/quote">&#9993; Request Quote</a></li>
+											<li><a href="/contact">&#9993; Request Quote</a></li>
 										</ul>
 									</li>
 							</ul>
 							</li>
-							<li><a href="/quote" class="button primary">Request A Quote</a></li>
+							<li><a href="/contact" class="button primary">Request A Quote</a></li>
 						</ul>
 					</nav>
 				</header>
