--- a/policies/index.html
+++ b/policies/index.html
@@ -48,7 +48,7 @@
 						<li class="specialSubmenu">
 							<a href="../special" class="black-color">Special Offer</a>
 							<ul>
-								<li><a href="../special">2024 Holiday Special</a></li>
+								<li><a href="../special">2025 New Year Special</a></li>
 							</ul>
 						</li>
 						<li><a href="../contact" class="button primary">Request A Quote</a></li>
@@ -179,7 +179,7 @@
 				</ul>
 				<!-- Copyright -->
 				<ul class="copyright">
-					<li>&copy; All rights reserved, Gelmu's Cleaning 2024</li></li>
+					<li>&copy; All rights reserved, Gelmu's Cleaning 2025</li></li>
 				</ul>
 
 				<ul class="copyright">
